--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,22 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
+            debuggable true
             minifyEnabled false
+            shrinkResources false
+            zipAlignEnable false
+            crunchPngs false
+            versionNameSuffix ".d"
+
+        }
+        release {
+            debuggable false
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnable true
+            crunchPngs true
+            versionNameSuffix ".r"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -26,6 +40,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    // Override the versionCode and VersionName
+    android.applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            output.versionCodeOverride = project.ext.buildTimestamp
+            output.versionNameOverride = project.ext.buildVersion + (variant.name == "debug" ? ".d" : ".r")
+        }
+    }
+
 }
 
 dependencies {
@@ -52,6 +74,18 @@ dependencies {
 
     // Hashing libraries: http://github.com/OpernHFT/Zero-Allocations-Hasing
     implementation 'net.openhft:zero-allocation-hashing:0.12'
+
+
+    //NewsAPI
+    implementation 'com.github.KwabenBerko:News-API-Java:1.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okio:okio:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    // LeackCanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
 
 
 }
