--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-// Apply the versions plugin
+// Build a number linked to the date to use as version.
+def YEAR_WEEK = new Date().format("yyww").toInteger()
+def DAY = new Date().format("u").toInteger()
+def HOUR_MINUTE = new Date().format("HHmm").toInteger()
+
+//The build time
+def BUILD_TIMESTAMP = 100000 * YEAR_WEEK + 10000 * DAY + HOUR_MINUTE
+
+// Semantic Versioning
+def MAJOR = 1
+def MINOR = 0
+def PATCH = BUILD_TIMESTAMP
+// Using https://en.wikipedia.org/wiki/List_of_islands_of_Chile
+def NAME = "Alacra"
+
+// The build version
+def BUILD_VERSION = "${NAME}-${MAJOR}.${MINOR}.${PATCH}"
+
+
 apply plugin: 'com.github.ben-manes.versions'
 buildscript {
     repositories {
@@ -17,9 +34,16 @@ buildscript {
 }
 
 allprojects {
+    ext.buildTimestamp = BUILD_TIMESTAMP
+    ext.buildVersion = BUILD_VERSION
+
+    logger.lifecycle("Version(${BUILD_VERSION}) BuildDir(${buildDir})")
+
     repositories {
         google()
         jcenter()
+        // External repository
+        maven{url'https://jitpack.io'}
     }
 }
 
