--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "cl.ucn.disc.dsm.rortizhidalgo.news"
-        minSdkVersion 26
+        applicationId "cl.ucn.disc.dsm.cmaldonado.news"
+        minSdkVersion 29
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -17,20 +17,19 @@ android {
     }
 
     buildTypes {
-        debug {
+        debug{
             debuggable true
             minifyEnabled false
             shrinkResources false
-            zipAlignEnable false
+            zipAlignEnabled false
             crunchPngs false
             versionNameSuffix ".d"
-
         }
         release {
             debuggable false
             minifyEnabled true
             shrinkResources true
-            zipAlignEnable true
+            zipAlignEnabled true
             crunchPngs true
             versionNameSuffix ".r"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -40,52 +39,61 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    // Override the versionCode and VersionName
+    // Override the versionCode and versionName
     android.applicationVariants.all { variant ->
-        variant.outputs.each { output ->
+        variant.outputs.each{ output ->
             output.versionCodeOverride = project.ext.buildTimestamp
-            output.versionNameOverride = project.ext.buildVersion + (variant.name == "debug" ? ".d" : ".r")
+            output.versionNameOverride = project.ext.buildVersion + {variant.name = "debug" ? ".d" : ".r"}
         }
-    }
 
+    }
 }
 
 dependencies {
-    //JUnit 5
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+
+    // JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    // Google stuff
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    // DateTime fix, library
+    // DateTime fix Library
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
     // SLF4J
     implementation 'org.slf4j:slf4j-api:1.7.30'
-    implementation 'org.slf4j:slf4j-simple:1.7.30'
+    implementation 'com.github.tony19:logback-android:2.0.0'
+    testImplementation 'org.slf4j:slf4j-simple:1.7.30'
 
     // Java Faker!
     implementation 'com.github.javafaker:javafaker:1.0.2'
-    // Apache commons lang
+
+    //Apache commons lang
     implementation 'org.apache.commons:commons-lang3:3.11'
 
-    // Hashing libraries: http://github.com/OpernHFT/Zero-Allocations-Hasing
+    //Hashing libraries
     implementation 'net.openhft:zero-allocation-hashing:0.12'
 
+    // NewsAPI
+    implementation "com.github.KwabenBerko:News-API-Java:1.0.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okio:okio:2.9.0"
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 
-    //NewsAPI
-    implementation 'com.github.KwabenBerko:News-API-Java:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okio:okio:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    //LeakCanary
+    debugImplementation"com.squareup.leakcanary:leakcanary-android:2.5"
 
-    // LeackCanary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+    //FastAdapter + RecyclerView
+    implementation "com.mikepenz:fastadapter:3.2.1"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
-
+    //Agregar libreria Acra!
 }
